--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
 
     </div><!-- /.container -->
 
+      <div class="container">
+
+      <div class="page-header">
+        <h1>Aula do dia 25/09/2017</h1>
+      </div>
+
+        <p><a href="/datavis-course/2017_09_25/movies_d3.html">movies_d3.html</a></p>
+        
+
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
