Aula 25/09 v2, erro nas cores e em agrupar generos

--- a/2017_09_25/movies_d3.html
+++ b/2017_09_25/movies_d3.html
@@ -80,7 +80,7 @@
             return l1 > l2 ?-1:1;
         };
 
-        d3.select('h2#t1').text("Gráfico de filmes ordenado por Bilheteria, decrescente");
+        d3.select('h2#t1').text("Gráfico de filmes ordenado da maior para a menor Bilheteria");
         d3.select('h2#t2').text("Gráfico de filmes ordenado do maior para o menor orçamento");
         d3.select('h2#t3').text("Gráfico de filmes ordenado do maior para o menor Lucro");
         d3.select('h2#t4').text("Gráfico de gênero, ordenado por Bilheteria");
