--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
       
 
         <p><a href="/datavis-course/2017_09_25/movies_d3.html">movies_d3.html</a></p>
+
+
+        <h1>Aula do dia 10/06/2017</h1>
+
+            <p><a href="/datavis-course/2017_10_02/index5.html">Ações</a></p>
+            <p><a href="/datavis-course/2017_10_02/movies_d3_dc.html">Bilheterias</a></p>
+
       
     </div><!-- /.container -->
 
