--- a/index.html
+++ b/index.html
@@ -64,12 +64,16 @@
         <p><a href="/datavis-course/2017_09_25/movies_d3.html">movies_d3.html</a></p>
 
 
-        <h1>Aula do dia 10/06/2017</h1>
+        <h1>Aula do dia 02/10/2017</h1>
 
             <p><a href="/datavis-course/2017_10_02/index5.html">Ações</a></p>
             <p><a href="/datavis-course/2017_10_02/movies_d3_dc.html">Bilheterias</a></p>
 
+
+		<h1>Aula do dia 09/10/2017</h1>
       
+      	 <p><a href="/datavis-course/2017_10_09/earthquakes.html">Terremotos</a></p>
+      		
     </div><!-- /.container -->
 
    
