--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
          
     <h1>Aula do dia 30/10/2017 </h1>
          <p><a href="/datavis-course/2017_10_30/songs.html">Songs</a></p>
+         teste
       		
     </div><!-- /.container -->
 
