--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
     <h1>Aula do dia 30/10/2017 </h1>
          <p><a href="/datavis-course/2017_10_30/songs.html">Songs</a></p>
          <p><a href="/datavis-course/2017_10_30/lesmiserables.html">"Les Misérables"</a></p>
+
+
+    <h1>Aula do dia 06/11/2017 </h1>
+         <p><a href="/datavis-course/2017_11_06/usa.html">Desemprego USA</a></p>
+         <p><a href="/datavis-course/2017_11_06/crimes.html">Crimes Fortaleza</a></p>
                		
     </div><!-- /.container -->
 
