--- a/Cidades/cidades.html
+++ b/Cidades/cidades.html
@@ -88,7 +88,7 @@ crossorigin=""/>
             var dataTable = dc.dataTable("#dc-table-graph");
 
 
-            d3.csv("cidades.csv", function (data) {
+            d3.csv("data/cidades.csv", function (data) {
               
               data.forEach(function(d) {
 
