--- a/Cidades/cidades.html
+++ b/Cidades/cidades.html
@@ -162,7 +162,7 @@ crossorigin=""/>
               .centerBar(true)
               .gap(56)
               .x(d3.scale.linear().domain([20, 90]))
-              .elasticY(true)
+              .elasticY(true);
               
               bar3
               .width(300)
