--- a/Cidades/BR1.html
+++ b/Cidades/BR1.html
@@ -15,7 +15,15 @@
 <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 
  <link rel="stylesheet" href="css/dc.css">
+  <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="starter-template.css" rel="stylesheet">
 	<style>
 
 	
@@ -85,7 +93,27 @@
 	</style>
 </head>
 <body>
-   
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Cidades Brasileiras</a>
+                  </div>
+                  <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                      <li class="active"><a href="/datavis-course/Cidades/BR1.html">Visão Geral</a></li>
+                      <li><a href="/datavis-course/Cidades/cidades.html">Gestores Municipais</a></li>
+                      <li><a href="#contact">Minha cidade</a></li>
+                      <li><a href="#contact">Sobre o Projeto</a></li>
+                    </ul>
+                  </div><!--/.nav-collapse -->
+                </div>
+              </nav>
   <div id="container-fluid" class="container">
     <header>
 	   <h1>Visão geral das cidades Brasileiras</h1>
