--- a/Cidades/BR1.html
+++ b/Cidades/BR1.html
@@ -26,7 +26,6 @@
    
 	<style>
 
-	
     #tooltip {
       position: absolute;
       width: 240px;
@@ -139,7 +138,7 @@
     #GINImap2010{
       position: absolute;
       margin-left: 700px;
-      top: 1500px;
+      top: 900px;
     }
 
 
@@ -159,6 +158,7 @@
       top: 1400px;
     }
 
+	
 	</style>
 </head>
 <body>
@@ -259,9 +259,9 @@
     .domain([0,0.25,0.5,0.75,1])
     .range(GINIbrewerColors);
 
-  let RendabrewerColors = colorbrewer.Blues[4];
+  let RendabrewerColors = colorbrewer.Blues[5];
   let Rendaquantize = d3.scale.linear()
-    .domain([0,250,500,750,1500])
+    .domain([0,250,500,750,1500, 2000])
     .range(RendabrewerColors);
 
 
@@ -478,9 +478,9 @@
             d3.csv("data/AtlasRENDA.csv", function (data) {
               
               data.forEach(function(d) {
-                d.H1991 = d.Renda1991;
-                d.H2000 = d.Renda2000;
-                d.H2010 = d.Renda2010;
+                d.H1991 = (+d.Renda1991);
+                d.H2000 = (+d.Renda2000);
+                d.H2010 = (+d.Renda2010);
 
             });
           
@@ -504,7 +504,7 @@
 
 
               his1Renda
-              .width(200)
+              .width(300)
               .height(200)
               .margins({top: 10, right: 10, bottom: 30, left:30})
               .dimension(DIM_1991)
@@ -512,13 +512,13 @@
               .transitionDuration(500)
               .centerBar(true)
               .gap(56)
-              .x(d3.scale.linear().domain([1,1000]))
+              .x(d3.scale.linear().domain([0,1500]))
               .elasticY(true)
               //.y(d3.scale.linear().domain([1,100]));
               ;  
 
                his2Renda
-              .width(200)
+              .width(300)
               .height(200)
               .margins({top: 10, right: 10, bottom: 30, left:30})
               .dimension(DIM_2000)
@@ -526,13 +526,13 @@
               .transitionDuration(500)
               .centerBar(true)
               .gap(56)
-              .x(d3.scale.linear().domain([1,1000]))
+              .x(d3.scale.linear().domain([0,1500]))
               .elasticY(true)
               //.y(d3.scale.linear().domain([1,100]));
               ;  
 
                his3Renda
-              .width(200)
+              .width(300)
               .height(200)
               .margins({top: 10, right: 10, bottom: 50, left:30})
               .dimension(DIM_2010)
@@ -540,7 +540,7 @@
               .transitionDuration(500)
               .centerBar(true)
               .gap(56)
-              .x(d3.scale.linear().domain([1,1000]))
+              .x(d3.scale.linear().domain([0,1500]))
               .elasticY(true)
               //.y(d3.scale.linear().domain([1,100]));
               ;  
