--- a/Cidades/cidades.html
+++ b/Cidades/cidades.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <html>
+    <meta charset="utf-8">
         <head>
             <title> Perfil Prefeitos</title>
              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -90,8 +91,8 @@ crossorigin=""/>
                   </div>
                   <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                      <li class="active"><a href="/datavis-course/Cidades/BR1.html">Visão Geral</a></li>
-                      <li><a href="/datavis-course/Cidades/cidades.html">Gestores Municipais</a></li>
+                      <li><a href="/datavis-course/Cidades/BR1.html">Visão Geral</a></li>
+                      <li class="active"><a href="/datavis-course/Cidades/cidades.html">Gestores Municipais</a></li>
                       <li><a href="#contact">Minha cidade</a></li>
                       <li><a href="#contact">Sobre o Projeto</a></li>
                     </ul>
