--- a/Cidades/cidades.html
+++ b/Cidades/cidades.html
@@ -87,7 +87,7 @@ crossorigin=""/>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Cidades Brasileiras</a>
+                    <a class="navbar-brand" href="/datavis-course/Cidades/index.html">Cidades Brasileiras</a>
                   </div>
                   <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
