--- a/Cidades/BR1.html
+++ b/Cidades/BR1.html
@@ -225,8 +225,7 @@
                     <ul class="nav navbar-nav">
                       <li class="active"><a href="/datavis-course/Cidades/BR1.html">Visão Geral</a></li>
                       <li><a href="/datavis-course/Cidades/cidades.html">Gestores Municipais</a></li>
-                      <li><a href="#contact">Minha cidade</a></li>
-                      <li><a href="#contact">Sobre o Projeto</a></li>
+                      <li><a href="/datavis-course/Cidades/minhacidade.html">Minha cidade</a></li>
                     </ul>
                   </div><!--/.nav-collapse -->
                 </div>
